--- a/Dockerfile.extra
+++ b/Dockerfile.extra
@@ -122,7 +122,7 @@ RUN apt-get update && \
   git build-essential pandoc gcc netcat-openbsd curl jq \
   python3-dev \
   ffmpeg libsm6 libxext6 \
-  libaio1 libaio.dev wget unzip \
+  libaio1 libaio.dev wget unzip docker.io \
   && rm -rf /var/lib/apt/lists/*
 
 # install python dependencies
