--- a/docker-compose.extra.yaml
+++ b/docker-compose.extra.yaml
@@ -19,7 +19,7 @@ services:
       - ENABLE_API_KEYS=true
       - USE_OLLAMA=false
       - HF_HOME=${HF_HOME:-${HOME}/.cache/huggingface}
-      - DOCKER_HOST=/var/run/docker.sock
+      - DOCKER_HOST=${DOCKER_HOST:-/var/run/docker.sock}
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
