--- a/docker-compose.extra.yaml
+++ b/docker-compose.extra.yaml
@@ -9,8 +9,8 @@ services:
       - ./backend:/app/backend
       - ./src:/app/src
       - open-webui:/app/backend/data
-      - ${HF_HOME}:/root/.cache/huggingface
-      - ${DOCKER_HOST}:/var/run/docker.sock
+      - ${HF_HOME:-${HOME}/.cache/huggingface}:/root/.cache/huggingface
+      - ${DOCKER_HOST:-/var/run/docker.sock}:/var/run/docker.sock
     ports:
       - ${OPEN_WEBUI_PORT-3000}:8080
     environment:
@@ -18,8 +18,6 @@ services:
       - GLOBAL_LOG_LEVEL=DEBUG
       - ENABLE_API_KEYS=true
       - USE_OLLAMA=false
-      - HF_HOME=${HF_HOME:-${HOME}/.cache/huggingface}
-      - DOCKER_HOST=${DOCKER_HOST:-/var/run/docker.sock}
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
