--- a/docker-compose.extra.yaml
+++ b/docker-compose.extra.yaml
@@ -9,7 +9,10 @@ services:
       - ./backend:/app/backend
       - ./src:/app/src
       - open-webui:/app/backend/data
-      - ${HF_HOME:-${HOME}/.cache/huggingface}:/root/.cache/huggingface
+      # where your huggingface model download
+      # you need to insure model folder name followed this format: models--<provider>--<name>
+      # e.g models--Qwen--Qwen3-0.6B
+      - ${MODELS_DIR:-${HOME}/.cache/huggingface/hub}:/root/.cache/huggingface/hub
       - ${DOCKER_HOST:-/var/run/docker.sock}:/var/run/docker.sock
     ports:
       - ${OPEN_WEBUI_PORT-3000}:8080
